<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="rn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">SunShine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_pref_location">Location: </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="pref_location_units_metric">metric</string>
    <string name="pref_location_units_imperial">imperial</string>

    <string name="location" translatable = "false">Location</string>
    <string name="location_key" translatable = "false">location</string>

    <string name="default_location" translatable = "false">95136,USA</string>
    <string name="location_hint" translatable = "false">Enter Postal Code and Country Code</string>
    <string name="location_units_key" translatable = "false">units_key</string>
    <string name="units_label">Units</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature"><xliff:g id = "temp">%1.0f</xliff:g>\u00B0</string>




    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

</resources>
